force-app/main/default/objects/Demande_de_conge__c/Demande_de_conge__c.object-meta.xml
<CustomObject>
    <label>Demande de congé</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Demande de congé Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demandes de congé</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>