force-app/main/default/objects/Demande_de_conge__c/fields/Debut__c.field-meta.xml
<CustomField>
    <fullName>Debut__c</fullName>
    <label>Début</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matin</fullName>
            </value>
            <value>
                <fullName>Midi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>