force-app/main/default/objects/Demande_de_conge__c/fields/Fin__c.field-meta.xml
<CustomField>
    <fullName>Fin__c</fullName>
    <label>Fin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matin</fullName>
            </value>
            <value>
                <fullName>Soir</fullName>
            </value>
            <value>
                <fullName>Midi</fullName>
                <isActive>false</isActive>
                <label>Midi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>