force-app/main/default/objects/Demande_de_conge__c/fields/Tyoe__c.field-meta.xml
<CustomField>
    <fullName>Tyoe__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Congé payé</fullName>
            </value>
            <value>
                <fullName>Congé naissance</fullName>
            </value>
            <value>
                <fullName>Maladie</fullName>
            </value>
            <value>
                <fullName>Congé maternité</fullName>
            </value>
            <value>
                <fullName>Congé sans solde</fullName>
            </value>
            <value>
                <fullName>Congé mariage</fullName>
            </value>
            <value>
                <fullName>Enfant malade</fullName>
            </value>
            <value>
                <fullName>Décès</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>