force-app/main/default/objects/Demande_de_conge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>